--- a/packages/stack/package.json
+++ b/packages/stack/package.json
@@ -25,7 +25,6 @@
   "react-native": "src/index.tsx",
   "source": "src/index.tsx",
   "module": "lib/module/index.js",
-  "types": "lib/typescript/src/index.d.ts",
   "files": [
     "src",
     "lib",
@@ -73,13 +72,7 @@
     "output": "lib",
     "targets": [
       "commonjs",
-      "module",
-      [
-        "typescript",
-        {
-          "project": "tsconfig.build.json"
-        }
-      ]
+      "module"
     ]
   }
 }
